validacion helper dominios email, inicio tailwind

--- a/frontend/src/styles/form.css
+++ b/frontend/src/styles/form.css
@@ -60,7 +60,7 @@
 	}
 	input {
 		display: flex;
-		border: 3px solid #003366; /*Color del borde de inputs del formulario*/
+		border: 3px solid #001a33; /*Color del borde de inputs del formulario*/
 		border-radius: 12px;
 		padding: 8px 5px;
 		background-repeat: no-repeat;
