--- a/frontend/src/styles/form.css
+++ b/frontend/src/styles/form.css
@@ -1,4 +1,4 @@
-@media (max-width: 480px) {
+@media (width <= 480px) {
     .form {
         padding-left: 2px;
 		padding-right: 2px;
@@ -36,138 +36,148 @@
 
 
 .form {
-	background-color: #eef7ff; /*Color del formulario*/
+	background-color: #eef7ff; /* Color del formulario */
 	padding: 7vh;
 	display: flex;
 	flex-direction: column;
 	border-radius: 24px;
 	align-items: center;
+
 	h1 {
-		color: #003366; /*Color del titulo del formulario*/
+		color: #036; /* Color del titulo del formulario */
 		font-size: 30px;
 		font-weight: bold;
 		margin: 0;
 		margin-bottom: 4vh;
 	}
+
 	div {
 		width: 100%;
 		display: flex;
 	}
+
 	label {
-		color: #003366; /*Color label de inputs del formulario*/
+		color: #036; /* Color label de inputs del formulario */
 		font-weight: bold;
 		margin-bottom: 0.7vh;
 	}
+
 	input {
 		display: flex;
-		border: 3px solid #001a33; /*Color del borde de inputs del formulario*/
-		border-radius: 12px;
+		border: 3px solid #001a33; /* Color del borde de inputs del formulario */
 		padding: 8px 5px;
 		background-repeat: no-repeat;
 		margin-bottom: 0.8vh;
 		background-color: #eef7ff;
 		font-weight: regular;
 		font-size: 16px;
-		color: #003366;
+		color: #036;
 		border-radius: 12px;
 		background-position: right 10px center;
 		background-size: 25px 25px;
 		box-sizing: border-box;
 	}
+
 	input::placeholder {
-		color: rgba(0, 51, 102, 0.3);
+		color: rgb(0 51 102 / 30%);
 		font-weight: light;
 	}
+
 	input:focus {
-		background-color: rgba(0, 110, 223, 0.14);
+		background-color: rgb(0 110 223 / 14%);
 		font-weight: regular;
 	}
+
 	select {
 		display: flex;
-		border: 3px solid #003366; /*Color del borde de selects del formulario*/
-		border-radius: 12px;
+		border: 3px solid #036; /* Color del borde de selects del formulario */
 		padding: 8px 5px;
-		background-repeat: no-repeat;
 		margin-bottom: 0.8vh;
 		background-color: #eef7ff;
 		font-weight: regular;
 		font-size: 16px;
-		color: #003366;
+		color: #036;
 		border-radius: 12px;
-		background-position: right 30px center;
 		background-size: 25px 25px;
 		box-sizing: border-box;
 		background-image: url('../assets/ChevronDownIcon.svg');
 		background-repeat: no-repeat;
 		background-position: calc(100% - 12px) center;
-		-webkit-appearance: none;
-		-moz-appearance: none;
+		appearance: none;
+		appearance: none;
 		appearance: none;
 	}
+
 	select::placeholder {
-		color: rgba(0, 51, 102, 0.3);
+		color: rgb(0 51 102 / 30%);
 		font-weight: light;
 	}
+
 	select:focus {
-		background-color: rgba(0, 110, 223, 0.14);
+		background-color: rgb(0 110 223 / 14%);
 		font-weight: regular;
 	}
+
 	textarea {
 		display: flex;
-		border: 3px solid #003366; /*Color del borde de textareas del formulario*/
-		border-radius: 12px;
+		border: 3px solid #036; /* Color del borde de textareas del formulario */
 		padding: 8px 5px;
 		background-repeat: no-repeat;
 		margin-bottom: 0.8vh;
 		background-color: #eef7ff;
 		font-weight: regular;
 		font-size: 16px;
-		color: #003366;
+		color: #036;
 		border-radius: 12px;
 		background-position: right 10px center;
 		background-size: 25px 25px;
 		box-sizing: border-box;
 	}
+
 	textarea::placeholder {
-		color: rgba(0, 51, 102, 0.3);
+		color: rgb(0 51 102 / 30%);
 		font-weight: light;
 	}
+
 	textarea:focus {
-		background-color: rgba(0, 110, 223, 0.14);
+		background-color: rgb(0 110 223 / 14%);
 		font-weight: regular;
 	}
+
 	button {
-		padding: auto;
 		display: flex;
 		justify-content: center;
 		padding: 1.2vh 0;
 		border-radius: 12px;
-		border: none;
 		width: 100%;
-		background-color: #003366; /*Color del boton del formulario*/
+		background-color: #036; /* Color del boton del formulario */
 		color: #eef7ff;
 		font-weight: bold;
 		font-size: 16px;
-		border: 3px solid #003366; /*Color del borde del boton*/
+		border: 3px solid #036; /* Color del borde del boton */
 		margin-top: 10px;
 	}
+
 	button:hover{
-		border: 3px solid #003366;
+		border: 3px solid #036;
 		background-color: #eef7ff;
-		color: #003366;
+		color: #036;
 		transition: .3s ease-out;
 	}
+
 	div {
 		display: flex;
 		flex-direction: column;
 		width: 100%;
 	}
+
 	.footerContent {
 		display: flex;
 		align-items: center;
 		margin-top: 10px;
 	}
 }
+
 .form .error-message {
     visibility: hidden;
     height: 20px;
@@ -175,13 +185,14 @@
     font-size: 13px;
 	padding-left: 5px;
 }
+
 .form .error-message.visible {
     visibility: visible;
 }
 
 .container {
 	height: 100vh;	
-	background: linear-gradient(90deg, #003366, #001a33); /*Color principal para login (gradiente)*/
+	background: linear-gradient(90deg, #036, #001a33); /* Color principal para login (gradiente) */
 	display: flex;
 	justify-content: center;
 	align-items: center;
