--- a/frontend/src/styles/navbar.css
+++ b/frontend/src/styles/navbar.css
@@ -4,9 +4,10 @@
 	top: 0;
 	left: 0;
 	display: block;
-	background-color: #003366; /*Color de la navbar*/
+	background-color: #036; /* Color de la navbar */
 	height: 9vh;
 	z-index: 1000;
+
 	ul {
 		display: flex;
 		justify-content:end;
@@ -14,12 +15,14 @@
 		padding: 0 5vw;
 		margin: 0;
 		height: 100%;
+
 		li {
 			display: flex;
 			align-items: center;
 			padding: 0 60px;
 			position: relative;
 			height: 100%;
+
 			a {
 				color: white;
 				font-size: 0.9em;
@@ -27,9 +30,10 @@
 				position: relative;
 				border-bottom: transparent 3px solid;
 				transition: border-color 0.3s ease;
-				padding: 0 10px 3px 10px;
+				padding: 0 10px 3px;
 				box-sizing: border-box;
 			}
+
 			:not(.active)::before {
 				content: "";
 				position: absolute;
@@ -42,10 +46,12 @@
 				transform-origin: bottom;
 				transition: transform 0.3s ease;
 			}
+
 			:not(.active):hover::before {
 				animation: heartbeat 5s ease-in-out infinite;
 				transform: scaleX(1);
 			}
+
 			.active {
 				font-weight: bold;
 				background-color: #eef7ff;
@@ -77,11 +83,11 @@
 	margin: 4px 0;
 }
 
-@media (max-width: 768px) {
+@media (width <= 768px) {
 	.nav-menu ul {
 		display: none;
 		flex-direction: column;
-		background-color: #003366;
+		background-color: #036;
 		position: absolute;
 		top: 9vh;
 		left: 0;
@@ -104,8 +110,9 @@
 		padding: 0;
 		width: 100%;
 		height: 60px;
+
 		a {
-			color: #003366;
+			color: #036;
 			font-weight: bold;
 			font-size: 0.9em;
 			text-decoration: none;
@@ -118,17 +125,18 @@
 	}
 }
 
-@media (min-width: 768px) and (max-width: 1024px) {
+@media (width >= 768px) and (width <= 1024px) {
 	.nav-menu ul {
 		display: none;
 		flex-direction: column;
-		background-color: #003366;
+		background-color: #036;
 		position: absolute;
 		top: 9vh;
 		left: 0;
 		width: 100%;
 		text-align: center;
 	}
+
 	.nav-menu.activado ul {
 		display: flex;
 		background-color: #eef7ff;
@@ -144,8 +152,9 @@
 		padding: 0;
 		width: 100%;
 		height: 60px;
+
 		a {
-			color: #003366;
+			color: #036;
 			font-weight: bold;
 			font-size: 0.9em;
 			text-decoration: none;
