--- a/frontend/src/styles/popup.css
+++ b/frontend/src/styles/popup.css
@@ -1,14 +1,12 @@
 .bg{
     position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background: rgba(18, 19, 18, 0.338);
+    inset: 0;
+    background: rgb(18 19 18 / 33.8%);
     display: flex;
     align-items: center;
     justify-content: center;
 }
+
 .popup{
     top: 30px;
     height: 700px;
@@ -17,6 +15,7 @@
     position: relative;
     border-radius: 12px;
 }
+
 .close{
     position: absolute;
     margin-top: 20px;
@@ -27,21 +26,27 @@
     border: white;
 
 }
+
 .title{
     font-size: 17px;
     font-weight: 700;
 }
+
 .popup .form {
     padding: 35px;
+
     h1 {
         margin-bottom: 30px;
     }
+
     button {
         margin-top: 0;
     }
+
     .container_inputs {
         margin-bottom: 10px;
     }
+
     .tooltip-icon {
         position: relative;
         top: 4px;
@@ -49,10 +54,11 @@
         cursor: pointer;
         display: inline-block;
     }
+
     .tooltip-icon .tooltip-text {
     visibility: hidden;
     width: 150px;
-    background-color: rgba(0, 0, 0, 0.75);
+    background-color: rgb(0 0 0 / 75%);
     color: #fff;
     text-align: center;
     border-radius: 4px;
@@ -65,6 +71,7 @@
     opacity: 0;
     transition: opacity 0.3s;
     }
+
     .tooltip-icon .tooltip-text::after {
     content: "";
     position: absolute;
@@ -73,12 +80,14 @@
     margin-top: -5px;
     border-width: 5px;
     border-style: solid;
-    border-color: transparent rgba(0, 0, 0, 0.75) transparent transparent;
+    border-color: transparent rgb(0 0 0 / 75%) transparent transparent;
     }
+
     .tooltip-icon:hover .tooltip-text {
     visibility: visible;
     opacity: 1;
     }
+
     .toggle-password-icon {
         top: 47.5%;
     }
