--- a/frontend/src/styles/search.css
+++ b/frontend/src/styles/search.css
@@ -5,13 +5,14 @@
     background-image: url('../assets/SearchIcon.svg');
     background-repeat: no-repeat;
     background-position: 10px center;
-    border: 1px solid #003366;
+    border: 1px solid #036;
     font-size: 16px;
     width: 200px;
-    background-color: rgba(255, 255, 255, 0.87);
+    background-color: rgb(255 255 255 / 87%);
     color: black;
 }
+
 .search-input-table::placeholder {
     color: black;
-    font-family: "Montserrat", sans-serif;
+    font-family: Montserrat, sans-serif;
 }
