--- a/frontend/src/styles/users.css
+++ b/frontend/src/styles/users.css
@@ -21,18 +21,19 @@
 }
 
 .title-table {
-    color: #003366;
+    color: #036;
     margin-left: 70px;
 }
 
 .filter-actions {
     display: flex;
     gap: 10px;
+
     button {
-        background: rgba(255, 255, 255, 0.87);
+        background: rgb(255 255 255 / 87%);
         border: #fff;
         cursor: pointer;
-        box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+        box-shadow: rgb(99 99 99 / 20%) 0 2px 8px 0;
         
     }
 }
@@ -41,10 +42,11 @@
     margin-right: 70px;
 }
 
-@media (max-width: 767px) {
+@media (width <= 767px) {
     .title-table {
         margin: 0;
     }
+
     .top-table {
         display: flex;
         flex-direction: column;
@@ -58,15 +60,18 @@
     .filter-actions {
         margin-bottom: 10px;
     }
+
     .table-container {
         margin: 0;
         width: 352px;
         height: 500px;
     }
+
     .popup {
         width: 350px;
         height: 600px;
     }
+
     .popup .form {
         padding: 20px;
     }
@@ -80,7 +85,7 @@
     }
 }
 
-@media (min-width: 768px) and (max-width: 1024px) {
+@media (width >= 768px) and (width <= 1024px) {
     .title-table {
         margin-left: 35px;
     }
